# Multi_Sensor_Fusion_for_Localization

./: .gitignore  ReadMe.md
bringup/: CMakeLists.txt  package.xml  相机的静态tf  硬件启动说明.md
bringup/launch/: all.launch  cam1.launch  cam1_high_res.launch  cam1_rgbd.launch  cam2.launch  cam3.launch  cam4.launch  cam4_imu.launch  four_cam_bringup.launch  four_cam_highres.launch  four_cam_lowres.launch  imu.launch  imu_trans.launch  keyboard_teleop.launch  lidar.launch  pub_image.launch  pub_tf.launch  show_imu.launch
bringup/rviz/: imu.rviz  view_aruco_result.rviz  view_pointcloud.rviz
bringup/scripts/: clearpath_teleop_key.py  turtlebot_teleop_key
bringup/src/: camera_sync_test.cpp  pub_image.cpp
calib/: cam1.yaml  cam3.yaml  标定说明.md
calib/aruco_mapping/data/: cam2.ini  cam4.ini  rs_d435.ini
calib/aruco_mapping/src/: aruco_mapping.cpp
calib/lidar_camera_calibration/: CMakeLists.txt
calib/lidar_camera_calibration/conf/: config_file.txt  config_file_1.txt  config_file_2.txt  config_file_3.txt  lidar_camera_calibration.yaml  marker_coordinates.txt  transform.txt
calib/lidar_camera_calibration/launch/: cam1_lidar_RT.launch  cam2_lidar_RT.launch  cam3_lidar_RT.launch  cam4_lidar_RT.launch  find_transform.launch
calib/lidar_camera_calibration/log/: avg_values.txt  points.txt  transform.txt
calib/lidar_camera_calibration/rviz/: sync.rviz
calib/lidar_camera_calibration/src/: find_velodyne_points.cpp  get_RT.cpp  get_corners.cpp  utils_config.cpp  utils_pcl.cpp
calib/外参标定结果/cam1/: transform.txt
calib/外参标定结果/cam2/: transform.txt
calib/外参标定结果/cam3/: points.txt  transform.txt  终端
calib/外参标定结果/cam4/: transform.txt  终端
fusion/: 融合说明.md
fusion/cam_lidar_fusion/: CMakeLists.txt
fusion/cam_lidar_fusion/include/: point_cloud_proj.h
fusion/cam_lidar_fusion/launch/: online_fusion_kitti.launch
fusion/cam_lidar_fusion/src/: ground_plane_fitter.cpp  point_cloud_proj.cpp
fusion/cam_lidar_seg/: CMakeLists.txt  README.md  package.xml
fusion/cam_lidar_seg/cfg/: cam1.txt  cam1_highres.txt  cam1_lowres.txt  cam2_lowres.txt  cam3_lowres.txt  cam4.txt  cam4_highres.txt  cam4_lowres.txt  fusion.txt  fusion_lowres_raw.txt  fusion_lowres_seg.txt  kitti_raw.txt  kitti_seg.txt  seg.txt
fusion/cam_lidar_seg/include/: fusion.h  project.h
fusion/cam_lidar_seg/launch/: fusion.launch  project.launch
fusion/cam_lidar_seg/rviz/: dis.rviz  four_cam_lidar_seg.rviz  kitti.rviz
fusion/cam_lidar_seg/src/: fusion.cpp  project.cpp
fusion/ros_detection_tracking/: CMakeLists.txt
fusion/ros_detection_tracking/cfg/: detect_config.txt  initial_params.txt
fusion/ros_detection_tracking/include/ros_detection_tracking/: camFusion.hpp  dataStructures.h  detectandtrackNode.hpp  lidarData.hpp  matching2D.hpp  project.h
fusion/ros_detection_tracking/src/project/: project.cpp
fusion/ros_detection_tracking/src/ros_ttc/: camFusion_Student.cpp  detectandtrackNode.cpp  lidarData.cpp  matching2D_Student.cpp  objectDetection2D.cpp  utils.cpp
localize/: 定位说明.md
localize/A-LOAM/rviz_cfg/: aloam_velodyne.rviz
localize/hdl_global_localization/: README.md
localize/hdl_global_localization/config/: bbs_config.yaml  fpfh_config.yaml  general_config.yaml  ransac_config.yaml
localize/hdl_global_localization/launch/: hdl_global_localization.launch  hdl_global_localization_seg.launch  hdl_global_localization_test.launch
localize/hdl_global_localization/rviz/: view_global_localization.rviz
localize/hdl_global_localization/src/: hdl_global_localization_node.cpp  hdl_global_localization_test.cpp
localize/hdl_localization/apps/: globalmap_server_nodelet.cpp  hdl_localization_nodelet.cpp
localize/hdl_localization/launch/: 6.launch  604.launch  6_gt.launch  6_imu.launch  6_imu_orb.launch  6_imu_vo.launch  loc_604.launch  loc_604_no_ground.launch  loc_construction.launch  sim.launch
localize/hdl_localization/rviz/: construction.rviz
localize/hdl_localization/scripts/: plot_status.py
seg/: four_cam_seg_result.perspective  分割说明.md
seg/euclidean_cluster/include/: euclidean_cluster_core.h
seg/euclidean_cluster/launch/: euclidean_cluster_output.launch
seg/euclidean_cluster/rviz/: division.rviz
seg/euclidean_cluster/src/: euclidean_cluster_core.cpp  euclidean_cluster_node.cpp
seg/ground_filter/: CMakeLists.txt  package.xml
seg/ground_filter/include/: ground_filter.h
seg/ground_filter/launch/: filter.launch
seg/ground_filter/src/: ground_filter_node.cpp
seg/ros-semantic-segmentation-pytorch/: download_data.sh
seg/ros-semantic-segmentation-pytorch/config/: ade20k-hrnetv2.yaml  ade20k-mobilenetv2dilated-c1_deepsup.yaml  (+3 more)
seg/semantic_segmentation_ros/: CMakeLists.txt  README.md  download_data.sh  package.xml  requirements.txt
seg/semantic_segmentation_ros/config/: ade20k-resnet18dilated-ppm_deepsup.yaml  ade20k-resnet50-upernet.yaml
seg/semantic_segmentation_ros/data/: color_coding_semantic_segmentation_classes.xlsx
seg/semantic_segmentation_ros/launch/: four_cam_seg.launch  four_cam_seg_tiny.launch  four_cam_seg_tiny_concat.launch  kitti.launch  kitti_tiny.launch  semantic_segmentation_tiny.launch  test.launch  test_tiny.launch
seg/semantic_segmentation_ros/scripts/: four_cam_segmentation.py  four_cam_segmentation_concat.py  run_semantic_segmentation  test.py
seg/semantic_segmentation_ros/scripts/mit_semseg/: dataset.py
sim/: 仿真说明.md
sim/autonomous_exploration_development_environment/: state_estimation_setup_notes.txt
utils/T_to_xyzrpy/: CMakeLists.txt  main.cpp
utils/imu_trans/: CMakeLists.txt  package.xml
utils/imu_trans/src/: imu_trans_node.cpp  tf2_listen.cpp
utils/imu_trans/test/: imu.bag
utils/imu_transformer/: CMakeLists.txt  package.xml
utils/imu_transformer/include/imu_transformer/: imu_transformer_nodelet.h  tf2_sensor_msgs.h
utils/imu_transformer/launch/: system.launch  to_velo.launch
utils/imu_transformer/rviz/: imu.rviz
utils/imu_transformer/src/: imu_transformer.cpp  imu_transformer_node.cpp  imu_transformer_nodelet.cpp
utils/show_mesh_in_rviz/: CMakeLists.txt  package.xml
(+132 files in other folders)
