<?xml version="1.0"?>
<package format="2">
  <name>semantic_segmentation_ros</name>
  <version>1.0.0</version>
  <description>ROS wrapper for Semantic Segmentation in python3 and pytorch</description>

  <author email="pranay731@live.com">Pranay Suman</author>
  <maintainer email="pranay731@live.com">Pranay Suman</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>rospy</depend>

</package>
